rust/codec-doi/tests/snapshots/examples__10.48550__arxiv.2507.09057-article.snap
---
source: rust/codec-doi/tests/examples.rs
expression: article
---
{
  "type": "Article",
  "abstract": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Assessment of multistate disease progression is commonplace in biomedical research, such as, in periodontal disease (PD). However, the presence of multistate current status endpoints, where only a single snapshot of each subject's progression through disease states is available at a random inspection time after a known starting state, complicates the inferential framework. In addition, these endpoints can be clustered, and spatially associated, where a group of proximally located teeth (within subjects) may experience similar PD status, compared to those distally located. Motivated by a clinical study recording PD progression, we propose a Bayesian semiparametric accelerated failure time model with an inverse-Wishart proposal for accommodating (spatial) random effects, and flexible errors that follow a Dirichlet process mixture of Gaussians. For clinical interpretability, the systematic component of the event times is modeled using a monotone single index model, with the (unknown) link function estimated via a novel integrated basis expansion and basis coefficients endowed with constrained Gaussian process priors. In addition to establishing parameter identifiability, we present scalable computing via a combination of elliptical slice sampling, fast circulant embedding techniques, and smoothing of hard constraints, leading to straightforward estimation of parameters, and state occupation and transition probabilities. Using synthetic data, we study the finite sample properties of our Bayesian estimates, and their performance under model misspecification. We also illustrate our method via application to the real clinical PD dataset."
          }
        }
      ]
    }
  ],
  "authors": [
    {
      "type": "Person",
      "familyNames": [
        "Das"
      ],
      "givenNames": [
        "Snigdha"
      ]
    },
    {
      "type": "Person",
      "familyNames": [
        "Chae"
      ],
      "givenNames": [
        "Minwoo"
      ]
    },
    {
      "type": "Person",
      "familyNames": [
        "Pati"
      ],
      "givenNames": [
        "Debdeep"
      ]
    },
    {
      "type": "Person",
      "familyNames": [
        "Bandyopadhyay"
      ],
      "givenNames": [
        "Dipankar"
      ]
    }
  ],
  "datePublished": {
    "type": "Date",
    "value": "2025"
  },
  "title": [
    {
      "type": "Text",
      "value": {
        "string": "A monotone single index model for spatially-referenced multistate current status data"
      }
    }
  ],
  "content": []
}
